#18 add grpc function check stok
